# CSALT

./: .gitignore  .gitmodules  AveragedOrbitalElements.och  AveragedOrbitalElementsData.txt  CMakeLists.txt  DebrisDeorbit.och
application/data/csalt/: aao_sol.och  aoe_controls.txt  aoe_states.txt  ddo_guess.och  ddo_input.txt
application/debug/: AveragedOrbitalElementsData.txt  BangBang.och  BangBangData.txt  Brachistochrone.och  BrachistochroneData.txt  BrachistochroneDefaultSnoptPrint.och  BrachistochroneDefaultSnoptPrintData.txt  BrachistochroneInvalidSnoptPrintData.txt  BrachistochroneNoSnoptPrint.och  BrachistochroneNoSnoptPrintData.txt  BrysonDenham.och  BrysonDenhamData.txt  BrysonMaxRange.och  BrysonMaxRangeData.txt  CatalyticGasOilCracker.och  CatalyticGasOilCrackerData.txt  ConwayOrbitExample.och  ConwayOrbitExampleData.txt  ConwayOrbitExampleRK.och  ConwayOrbitExampleRKData.txt  CsaltLog.txt  DebrisDeorbit.och  GoddardRocket.och  GoddardRocketData.txt  GoddardRocketThreePhase.och  GoddardRocketThreePhaseData.txt  HohmannTransfer.och  HohmannTransferData.txt  Hull95.och  Hull95Data.txt  HyperSensitive.och  HyperSensitiveData.txt  InteriorPoint.och  InteriorPointData.txt  LinearTangentSteering.och  LinearTangentSteeringData.txt  LinearTangentSteeringStaticVar.och  LinearTangentSteeringStaticVarData.txt  MoonLander.och  MoonLanderData.txt  (+15 more)
depends/: .gitignore  CMakeLists.txt
depends/CMakeModules/: CsaltJlunaConfig.cmake  FindJulia.cmake  GmatBoostConfig.cmake
src/: CMakeLists.txt
src/csalt/: CMakeLists.txt
src/csalt/src/collutils/: NLPFuncUtilRadau.cpp  NLPFuncUtil_Coll.cpp  NLPFuncUtil_Coll.hpp
src/csalt/src/executive/: Phase.cpp  Phase.hpp  RadauPhase.cpp  SnoptOptimizer.cpp  Trajectory.cpp  Trajectory.hpp
src/csalt/src/userfunutils/: UserPointFunction.hpp
src/csalt/src/util/: GuessGenerator.cpp  OCHTrajectoryData.cpp  OCHTrajectoryData.hpp  OCHTrajectorySegment.cpp  OCHTrajectorySegment.hpp  TrajectoryData.cpp
src/csaltApplication/: CMakeLists.txt
src/csaltApplication/src/: csaltApplication.cpp
src/csaltApplication/src/drivers/: CsaltDriver.cpp  CsaltDriver.hpp  DebrisDeorbitDriver.cpp  DebrisDeorbitDriver.hpp
src/csaltApplication/src/pointpath/: DebrisDeorbitFinalStateConstraint.cpp  DebrisDeorbitFinalStateConstraint.hpp  DebrisDeorbitInitialStateConstraint.hpp  DebrisDeorbitPathObject.cpp  DebrisDeorbitPointObject.cpp  DebrisDeorbitPointObject.hpp
src/csaltApplicationWithJulia/: CMakeLists.txt
src/csaltApplicationWithJulia/jlsrc/: Manifest.toml  Project.toml  include.jl
src/csaltApplicationWithJulia/jlsrc/AveragedOrbitalElements/: analytic_partials.jl  autodiff_partials.jl  eoms.jl  include.jl  partials.jl  process_solution.jl  quadrature.jl  test_partials.jl
src/csaltApplicationWithJulia/jlsrc/averaged_orbital_elements/: eoms.jl  include.jl
src/csaltApplicationWithJulia/src/: csaltApplicationWithJulia.cpp  csaltApplicationWithJulia.hpp
src/csaltApplicationWithJulia/src/drivers/: AveragedOrbitalElementsDriver.cpp  AveragedOrbitalElementsDriver.hpp  CsaltDriver.cpp  CsaltDriver.hpp  DebrisDeorbitDriver.cpp  DebrisDeorbitDriver.hpp
src/csaltApplicationWithJulia/src/pointpath/: AveragedOrbitalElementsPathObject.cpp  AveragedOrbitalElementsPathObject.hpp  AveragedOrbitalElementsPointObject.cpp  AveragedOrbitalElementsPointObject.hpp  DebrisDeorbitPathObject.cpp  DebrisDeorbitPathObject.hpp
src/csaltApplicationWithJulia/src/util/: julia_utils.cpp  julia_utils.hpp
src/csaltTester/: CMakeLists.txt
src/csaltTester/src/TestBrachistichrone/: Makefile  TestBrachistichrone.cpp
src/csaltTester/src/TestOptCtrl/src/: TestOptCtrl.cpp  testcases.hpp
src/csaltTester/src/TestOptCtrl/src/drivers/: CsaltTestDriver.cpp  DebrisDeorbitDriver.cpp  DebrisDeorbitDriver.hpp  GoddardRocketThreePhaseDriver.cpp
src/csaltTester/src/TestOptCtrl/src/pointpath/: DebrisDeorbitInitialStateConstraint.cpp  DebrisDeorbitPointObject.cpp  GoddardRocketThreePhasePathObject.cpp  GoddardRocketThreePhasePointObject.cpp
src/gmatutil/include/: utildefs.hpp
src/gmatutil/util/: CCSDSOEMWriter.cpp
